--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <!-- Navigation to other pages -->
     <header>
       <div class="topcontainer">
-        <nav>
-          <div class="topline">
-            <div class="logofull">
-              <a class="logo" href="/"><span>WEB</span>STUDIO</a>
-            </div>
+        <nav class="topline">
+          <div class="logofull">
+            <a class="logo" href="/"><span>WEB</span>STUDIO</a>
+          </div>
+          <div class="nav">
             <ul class="navigation">
               <li class="studio">
                 <a href="/studio">Studio</a>
@@ -38,7 +38,7 @@
                 <a href="./portfolio.html">Portfolio</a>
               </li>
               <li class="contacts">
-                <a href="/contact">Contacs</a>
+                <a href="/contact">Contacts</a>
               </li>
             </ul>
           </div>
