--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-    href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-    rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -23,7 +24,7 @@
     <!-- Navigation to other pages -->
     <header>
       <div class="topcontainer">
-        <nav class=" topline">
+        <nav class="topline">
           <div class="logofull">
             <a class="logo" href="/"><span>WEB</span>STUDIO</a>
           </div>
@@ -40,7 +41,7 @@
               </li>
             </ul>
           </div>
-       </nav>
+        </nav>
 
         <div class="tel-no">
           <ul class="emailandphone">
@@ -56,7 +57,7 @@
     </header>
     <!--End of Header-->
 
-    <!-- selection tab -->
+    <!-- Navigation -->
     <section>
       <div class="selectiontab">
         <nav>
@@ -70,52 +71,76 @@
         </nav>
       </div>
     </section>
-    <!-- selection tab -->
+    <!-- Navigation -->
 
     <!-- gallery -->
     <section>
-      <ul>
-        <li>
-          <li>
-          <img src="./images/bankingapp.jpg" alt="Banking App Interface Concept" width="360" />
+      <ul class="maingallery">
+        <li class="gallery">
+          <img
+            src="./images/bankingapp.jpg"
+            alt="Banking App Interface Concept"
+            width="360"
+          />
           <h3>Banking App Interface Concept</h3>
           <p>App</p>
         </li>
-          <img src="./images/cashlesspayment.jpg" alt="Cashless Payment" width="360" />
+        <li class="gallery">
+          <img
+            src="./images/cashlesspayment.jpg"
+            alt="Cashless Payment"
+            width="360"
+          />
           <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
-        <li>
-          <img src="./images/meditationapp.jpg" alt="Meditation App" width="360" />
+        <li class="gallery">
+          <img
+            src="./images/meditationapp.jpg"
+            alt="Meditation App"
+            width="360"
+          />
           <h3>Meditation App</h3>
           <p>App</p>
         </li>
-        <li>
+        <li class="gallery">
           <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360" />
           <h3>Taxi Service</h3>
           <p>Marketing</p>
         </li>
-        <li>
-          <img src="./images/screensillustration.jpg" alt="Screen Illustrations" width="360" />
+        <li class="gallery">
+          <img
+            src="./images/screensillustration.jpg"
+            alt="Screen Illustrations"
+            width="360"
+          />
           <h3>Screen Illustrations</h3>
           <p>Design</p>
         </li>
-        <li>
-          <img src="./images/onlinecourses.jpg" alt="Online Courses" width="360" />
+        <li class="gallery">
+          <img
+            src="./images/onlinecourses.jpg"
+            alt="Online Courses"
+            width="360"
+          />
           <h3>Online Courses</h3>
           <p>Marketing</p>
         </li>
-        <li>
-          <img src="./images/instastories.jpg" alt="Instagram Stories Concept" width="360" />
+        <li class="gallery">
+          <img
+            src="./images/instastories.jpg"
+            alt="Instagram Stories Concept"
+            width="360"
+          />
           <h3>Instagram Stories Concept</h3>
           <p>Design</p>
         </li>
-        <li>
+        <li class="gallery">
           <img src="./images/organicfood.jpg" alt="Organic Food" width="360" />
           <h3>Organic Food</h3>
           <p>Web Site</p>
         </li>
-        <li>
+        <li class="gallery">
           <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
           <h3>Fresh Coffee</h3>
           <p>Website</p>
@@ -124,9 +149,8 @@
     </section>
     <!-- gallery -->
 
-    
     <footer>
-       <div class="footer-content">
+      <div class="footer-content">
         <a class="logofooter" href="#"><span>WEB</span>STUDIO</a>
         <p class="footermessage">
           Increase the flow of customers and sales for your business with
