--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
     />
   </head>
 
-  <body>
+  <body class="container">
     <!--Start of header-->
     <!-- Navigation to other pages -->
     <header>
@@ -74,25 +74,29 @@
     <!-- Navigation -->
 
     <!-- gallery -->
-    <section>
-      <ul class="maingallery">
+    <section class="rows">
+      <ul class="row1">
         <li class="gallery">
           <img
             src="./images/bankingapp.jpg"
             alt="Banking App Interface Concept"
             width="360"
           />
-          <h3>Banking App Interface Concept</h3>
-          <p>App</p>
+          <div class="innerparagraph">
+            <h3>Banking App Interface Concept</h3>
+            <p>App</p>
+          </div>
         </li>
-        <li class="gallery">
+        <li class="cashpayment">
           <img
             src="./images/cashlesspayment.jpg"
             alt="Cashless Payment"
             width="360"
           />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <div class="innerparagraph">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </div>
         </li>
         <li class="gallery">
           <img
@@ -100,13 +104,19 @@
             alt="Meditation App"
             width="360"
           />
-          <h3>Meditation App</h3>
-          <p>App</p>
+          <div class="innerparagraph">
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </div>
         </li>
+      </ul>
+      <ul class="row2">
         <li class="gallery">
           <img src="./images/taxiservice.jpg" alt="Taxi Service" width="360" />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <div class="innerparagraph">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </div>
         </li>
         <li class="gallery">
           <img
@@ -114,8 +124,10 @@
             alt="Screen Illustrations"
             width="360"
           />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <div class="innerparagraph">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </div>
         </li>
         <li class="gallery">
           <img
@@ -123,27 +135,38 @@
             alt="Online Courses"
             width="360"
           />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <div class="innerparagraph">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </div>
         </li>
+      </ul>
+
+      <ul calss="row3">
         <li class="gallery">
           <img
             src="./images/instastories.jpg"
             alt="Instagram Stories Concept"
             width="360"
           />
-          <h3>Instagram Stories Concept</h3>
-          <p>Design</p>
+          <div class="innerparagraph">
+            <h3>Instagram Stories Concept</h3>
+            <p>Design</p>
+          </div>
         </li>
         <li class="gallery">
           <img src="./images/organicfood.jpg" alt="Organic Food" width="360" />
-          <h3>Organic Food</h3>
-          <p>Web Site</p>
+          <div class="innerparagraph">
+            <h3>Organic Food</h3>
+            <p>Web Site</p>
+          </div>
         </li>
         <li class="gallery">
           <img src="./images/freshcoffee.jpg" alt="Fresh Coffee" width="360" />
-          <h3>Fresh Coffee</h3>
-          <p>Website</p>
+          <div class="innerparagraph">
+            <h3>Fresh Coffee</h3>
+            <p>Website</p>
+          </div>
         </li>
       </ul>
     </section>
