--- a/portfolio.html
+++ b/portfolio.html
@@ -142,7 +142,7 @@
         </li>
       </ul>
 
-      <ul calss="row3">
+      <ul class="row3">
         <li class="gallery">
           <img
             src="./images/instastories.jpg"
